# kinetic_codec

./: .gitignore  CMakeLists.txt  README.md  TODO  anova.py  build.sh  compression_suite.py  make_graphs.py  organize_test_data.ipynb  paper_graphs.py  results_record.xls
cross_fir/: test_coefs  test_coefs1587694522.0585275  test_coefs1587694622.3649623  test_coefs1587694722.4560387  test_coefs1587695523.174024  test_coefs1587697224.7040818  test_coefs1587699026.4380007  test_coefs1587701428.7539802  test_coefs1587703831.0499835  test_coefs1587706033.0541534  test_coefs1587708635.4979947  test_coefs1587709836.694089  test_coefs1587711338.1342177  test_coefs1587713440.1882384  test_coefs1587715542.265313  test_coefs1587717544.2579966  test_coefs1587720246.9299953  test_coefs1587722048.7100234  test_coefs1587723750.3947706  test_coefs1587723850.494001  test_coefs1587782873.1687343  test_coefs1587786476.333322  test_coefs1587787577.185118  test_coefs1587788277.778297  test_coefs1587793481.7349966  test_coefs1587799987.1663423  track_changes.py
data/: .~lock.fixed_one.csv#  build_poly.py  build_spline.py  data_tools.py  example_data.txt  fixed_one.csv  fixed_pt.csv  process_csv.py  rot_only_trial.csv
data/one_sensor_2019-04-02.csv_dat/: 0_AccelY  0_GyroX  0_GyroZ  0_MagX  0_MagY  0_Package  0_Quat1  0_Quat2  0_Sampletime
data/raw_data/: acc_x  acc_y  acc_z  gyro_x  gyro_y  gyro_z
data/raw_data_big/: 0_AccelX  0_AccelZ  0_GyroY  0_MagZ  0_Quat3  0_Quat4  0_SensorIndex
data/raw_data_old/: 0_AccelX  0_AccelY  0_AccelZ  0_GyroX  0_GyroY  0_GyroZ  0_MagX  0_MagY  0_MagZ  0_Package  0_Quat1  0_Quat2  0_Quat3  0_Quat4  0_SensorIndex
kalman_filter/: extract_test.py  test_notebook.ipynb  unscented_kalman.py
libs/libfixmatrix/: CMakeLists.txt  Makefile  fixmatrix_unittests  fixmatrix_unittests_32bit  (+2 more)
lpc/: example_lpc_pitch.m  example_lpc_simple.m  example_xsynth.m
machine_learning/: HuGaDB_v1_walking_14_02.txt  HuGaDB_v1_walking_14_02.txt.back  optimal_fir.py  train.py  train.py.new
optimal_filters/: train.py
paper/: all_comp  paper_graphs.py  proposed_dist.py  results.py  results_record.xls  segment_movement_tukey
src/: CMakeLists.txt  data_format.h  encode.c  encode.h  fir_predictive_filter.c  fir_predictive_filter.h  main.c  poly_predict.c  poly_predict.h  stream_encoder.c  stream_encoder.h  test_fir.c
writing/: TRANS-JOUR.doc  chiasson_draft_1_0.aux  chiasson_draft_1_0.tex  chiasson_draft_1_1.tex  chiasson_draft_1_2.aux  chiasson_draft_1_2.bbl  chiasson_draft_1_2.blg  chiasson_draft_1_2.tex  chiasson_draft_1_3.aux  chiasson_draft_1_3.bbl  chiasson_draft_1_3.blg  chiasson_draft_1_3.tex  chiasson_draft_1_4.aux  chiasson_draft_1_4.blg  chiasson_draft_1_4.tex  chiasson_draft_1_5.aux  chiasson_draft_1_5.bbl  chiasson_draft_1_5.blg  chiasson_draft_1_5.tex  chiasson_draft_2_0.blg  chiasson_draft_2_0.tex  chiasson_draft_2_1.aux  chiasson_draft_2_1.bbl  chiasson_draft_2_1.blg  chiasson_draft_2_1.tex  chiasson_draft_2_2.aux  chiasson_draft_2_2.bbl  chiasson_draft_2_2.blg  chiasson_draft_2_2.tex  chiasson_draft_3_0.blg  chiasson_draft_3_1.aux  chiasson_draft_3_1.bbl  chiasson_draft_3_1.blg  chiasson_draft_3_1.tex  chiasson_draft_3_2.blg  chiasson_draft_3_2.tex  chiasson_draft_4_0.aux  chiasson_draft_4_0.bbl  chiasson_draft_4_0.blg  chiasson_draft_4_0.tex  (+21 more)
(+955 files in other folders)
